--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.6",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "sort-by": "^1.2.0",
