--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "@auth0/auth0-react": "^1.11.0",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "express-oauth2-jwt-bearer": "^1.1.0",
+    "jsonwebtoken": "^8.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "morgan": "^1.10.0",
+    "pg": "^8.8.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
