--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-oauth2-jwt-bearer": "^1.1.0",
+    "express-openid-connect": "^2.10.0",
     "jsonwebtoken": "^8.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
